--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="menu.js"></script>
     <title>Eco cosmetics</title>
   </head>
   <body>
     <header class="header">
       <div class="wrappler">
         <div class="header__top">
-          <a>
+          <button class="btn_menu-burguer">
             <img src="./images/icons/icon_menu.png" alt="icon menu" />
-          </a>
+          </button>
           <div class="brand">
             <img src="./images/icons/logo.png" alt="brand eco cosmetics" />
           </div>
@@ -48,7 +49,29 @@
     </header>
 
     <aside class="menu">
-      <nav></nav>
+      <div class="wrappler">
+        <div class="menu__content">
+          <button class="btn_menu-close">
+            <img
+              src="./images/icons/icon_close-menu.png"
+              alt="close menu icon"
+            />
+          </button>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__list__item">
+                <a class="nav__list__item__link" href="">Shop</a>
+              </li>
+              <li class="nav__list__item">
+                <a class="nav__list__item__link" href="">Contact</a>
+              </li>
+              <li class="nav__list__item">
+                <a class="nav__list__item__link" href="">About</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </aside>
 
     <section class="roll_message page__section">
@@ -213,7 +236,12 @@
               id=""
               placeholder="Phone Number"
             />
-            <textarea class="your_message def_textarea" name="" id="" placeholder="Your Message"></textarea>
+            <textarea
+              class="your_message def_textarea"
+              name=""
+              id=""
+              placeholder="Your Message"
+            ></textarea>
 
             <div class="btn_box">
               <button class="def_btn">send a message</button>
@@ -239,16 +267,22 @@
               </li>
             </ul>
             <div class="footer__nav__sociais">
-              <a href=""><img src="./images/icons/footer_facebook.png" alt="facebook icon"></a>
-              <a href=""><img src="./images/icons/footer_instagram.png" alt="instagram icon"></a>
+              <a href=""
+                ><img
+                  src="./images/icons/footer_facebook.png"
+                  alt="facebook icon"
+              /></a>
+              <a href=""
+                ><img
+                  src="./images/icons/footer_instagram.png"
+                  alt="instagram icon"
+              /></a>
             </div>
           </div>
 
           <div class="support_links">
             <ul class="support_links__list">
-              <li class="support_links__list__item">
-                Ukraine
-              </li>
+              <li class="support_links__list__item">Ukraine</li>
               <li class="support_links__list__item">
                 <a href="">support.mountain@gmail.com</a>
               </li>
@@ -260,9 +294,12 @@
               </li>
             </ul>
           </div>
-  
+
           <div class="copyright">
-            <p>&copy; 2019 witch of mountain <br> winds</p>
+            <p>
+              &copy; 2019 witch of mountain <br />
+              winds
+            </p>
           </div>
         </div>
       </div>
