--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -9,8 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="menu.js"></script>
+    <link rel="stylesheet" href="../../style.css" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script type="module" src="../scripts/menu.js"></script>
+    <script type="module" src="../scripts/backToTop.js"></script>
     <title>Eco cosmetics</title>
   </head>
   <body class="page__body">
@@ -18,15 +20,15 @@
       <div class="wrappler">
         <div class="header__content">
           <button class="btn_menu-burguer">
-            <img src="./images/icons/icon_menu.png" alt="icon menu" />
+            <img src="../images/icons/icon_menu.png" alt="icon menu" />
           </button>
           <div class="brand">
-            <a href="./index.html">
-              <img src="./images/icons/logo.png" alt="brand eco cosmetics" />
+            <a href="../../index.html">
+              <img src="../images/icons/logo.png" alt="brand eco cosmetics" />
             </a>
           </div>
           <div class="cart">
-            <img src="./images/icons/icon_shopping-bag.png" alt="cart icon" />
+            <img src="../images/icons/icon_shopping-bag.png" alt="cart icon" />
           </div>
         </div>
       </div>
@@ -37,20 +39,26 @@
         <div class="menu__content">
           <button class="btn_menu-close">
             <img
-              src="./images/icons/icon_close-menu.png"
+              src="../images/icons/icon_close-menu.png"
               alt="close menu icon"
             />
           </button>
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__list__item">
-                <a class="nav__list__item__link" href="#shop">Shop</a>
+                <a class="nav__list__item__link" href="../../index.html#shop"
+                  >Shop</a
+                >
               </li>
               <li class="nav__list__item">
-                <a class="nav__list__item__link" href="#contact">Contact</a>
+                <a class="nav__list__item__link" href="../../index.html#contact"
+                  >Contact</a
+                >
               </li>
               <li class="nav__list__item">
-                <a class="nav__list__item__link" href="#about">About</a>
+                <a class="nav__list__item__link" href="../../index.html#about"
+                  >About</a
+                >
               </li>
             </ul>
           </nav>
@@ -67,9 +75,9 @@
           </div>
           <div class="card_img">
             <img
-            src="./images/mobile_hydrophilic-oil2.png"
-            alt="hydrophilic oil"
-          />
+              src="../images/mobile_hydrophilic-oil2.png"
+              alt="hydrophilic oil"
+            />
           </div>
           <div class="btn_box">
             <button class="add-to-bag_btn def_btn">add to bag</button>
@@ -78,14 +86,28 @@
 
         <div class="about_product">
           <div class="about_product__ingredients">
-            <p><span>Ingredients:</span> cocosulfate, aloe hydrolate, sweet almond oil, wheat proteins, chamomile grass, lavender essential oil.</p>
+            <p>
+              <span>Ingredients:</span> cocosulfate, aloe hydrolate, sweet
+              almond oil, wheat proteins, chamomile grass, lavender essential
+              oil.
+            </p>
           </div>
           <div class="about_product__application">
-            <p><span>Application:</span> foam the shampoo in your hands and apply foam on the hair or draw a block over wet hair, foam, massage, rinse, apply balm or conditioner.</p>
+            <p>
+              <span>Application:</span> foam the shampoo in your hands and apply
+              foam on the hair or draw a block over wet hair, foam, massage,
+              rinse, apply balm or conditioner.
+            </p>
           </div>
         </div>
       </div>
     </section>
+
+    <div class="back_to_top">
+      <div class="wrappler">
+        <a href="#header" class="back_to_top__btn"><i class="ph-bold ph-arrow-up"></i></a>
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="wrappler">
@@ -105,12 +127,12 @@
             <div class="footer__nav__sociais">
               <a href=""
                 ><img
-                  src="./images/icons/footer_facebook.png"
+                  src="../images/icons/footer_facebook.png"
                   alt="facebook icon"
               /></a>
               <a href=""
                 ><img
-                  src="./images/icons/footer_instagram.png"
+                  src="../images/icons/footer_instagram.png"
                   alt="instagram icon"
               /></a>
             </div>
