--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script type="module" src="./src/scripts/menu.js"></script>
+    <script type="module" src="./src/scripts/cart.js"></script>
     <script type="module" src="./src/scripts/backToTop.js"></script>
     <script type="module" src="./src/scripts/shop.js"></script>
     <title>Eco cosmetics</title>
@@ -25,12 +26,47 @@
           </button>
           <div class="brand">
             <a href="./index.html">
-              <img src="./src/images/icons/logo.png" alt="brand eco cosmetics" />
+              <img
+                src="./src/images/icons/logo.png"
+                alt="brand eco cosmetics"
+              />
             </a>
           </div>
           <div class="cart">
-            <img src="./src/images/icons/icon_shop.png" alt="cart icon" />
+            <button>
+              <img src="./src/images/icons/icon_shop.png" alt="cart icon" />
+            </button>
+            <div class="cart__order">
+              <div class="cart__order__content">
+                <div class="cart__order__items">
+                  <div class="cart_product">
+                    <img src="./src/images/moonligth.png" />
+                    <div class="cart_product__infos">
+                      <p>Moonligth</p>
+                      <p>30 UAH</p>
+
+                      <small><span>Quant: </span>1</small>
+                    </div>
+                  </div>
+                  <div class="cart_product">
+                    <img src="./src/images/mobile_hero_image.png" />
+                    <div class="cart_product__infos">
+                      <p>Candle</p>
+                      <p>60 UAH</p>
+
+                      <small><span>Quant: </span>2</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="cart_order__total">
+                  <strong>TOTAL:</strong>
+                  <span>2000,00</span>
+                </div>
+              </div>
+            </div>
           </div>
+
+          <div class="overlay"></div>
         </div>
       </div>
     </header>
@@ -268,7 +304,9 @@
 
     <div class="back_to_top">
       <div class="wrappler">
-        <a href="#header" class="back_to_top__btn"><i class="ph-bold ph-arrow-up"></i></a>
+        <a href="#header" class="back_to_top__btn"
+          ><i class="ph-bold ph-arrow-up"></i
+        ></a>
       </div>
     </div>
 
